[gd_scene load_steps=7 format=3 uid="uid://dq0hve3xn83nl"]

[ext_resource type="Script" path="res://resources/gold_mine/gold_mine.gd" id="1_fhxx5"]
[ext_resource type="Texture2D" uid="uid://qn0rey6nfou2" path="res://resources/gold_mine/GoldMine_Inactive.png" id="1_ubblb"]
[ext_resource type="Texture2D" uid="uid://6eqb15b527fm" path="res://resources/gold_mine/GoldMine_Active.png" id="2_p7lfs"]
[ext_resource type="Texture2D" uid="uid://ddhdu080340vt" path="res://resources/gold_mine/GoldMine_Destroyed.png" id="3_7rjab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mshjr"]
size = Vector2(97, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s827y"]
size = Vector2(154, 84)

[node name="GoldMine" type="StaticBody2D"]
script = ExtResource("1_fhxx5")

[node name="InactiveSprite" type="Sprite2D" parent="."]
position = Vector2(0, -57)
texture = ExtResource("1_ubblb")

[node name="ActiveSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -57)
texture = ExtResource("2_p7lfs")

[node name="DestroyedSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -57)
texture = ExtResource("3_7rjab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -42)
shape = SubResource("RectangleShape2D_mshjr")

[node name="GatherPosition" type="Marker2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s827y")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
